--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        {% if site.show_plt_downloads %}
+        <ul class="downloads">
+          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/zipball/master/ }}">Plat Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform//tarball/master/ }}">Plat Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/ }}">View On <strong>GitHub</strong></a></li>
+        </ul>
+        {% endif %}
       </header>
       <section>
 
