--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,11 @@
         {% endif %}
         {% if site.show_plt_downloads %}
         <ul class="downloads">
-          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/zipball/master/ }}">Plat Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform//tarball/master/ }}">Plat Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/ }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/tarball/master/ }}">Platform Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/femus/tarball/master/ }}">FEMuS Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/foam-extend-foam-extend-4.0/tarball/master/ }}">Foam Extend Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/med-3.3.1/tarball/master/ }}">med 3.3.1 Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/MedCoupling-8.4.0/tarball/master/ }}">MedCoupling Download <strong>TAR File</strong></a></li>
         </ul>
         {% endif %}
       </header>
