--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
         {% endif %}
         {% if site.show_plt_downloads %}
         <ul class="downloads">
-          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/tarball/master/ }}" download>Platform Download <strong>TAR File</strong></a></li>
-          <li><a href="{{ https://github.com/FemusPlatform/femus/tarball/master/ }}" download>FEMuS Download <strong>TAR File</strong></a></li>
-          <li><a href="{{ https://github.com/FemusPlatform/foam-extend-foam-extend-4.0/tarball/master/ }}" download>Foam Extend Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/NumericPlatform/tarball/master/ }}">Platform Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/femus/tarball/master/ }}">FEMuS Download <strong>TAR File</strong></a></li>
+          <li><a href="{{ https://github.com/FemusPlatform/foam-extend-foam-extend-4.0/tarball/master/ }}">Foam Extend Download <strong>TAR File</strong></a></li>
         </ul>
         {% endif %}
       </header>
